--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
     <title>IIIT Trichy</title>
   </head>
   <body>
-  
+    <h1>IIIT Trichy</h1>
+    <h2>NIT campus Trichy</h2>
   </body>
 </html>
